# u-fat-demo

./: README.md
desktop-app/: launcher.py  plugin_loader.py  startup.py
desktop-app/dependencies/libewf-20230212/: Makefile.in  aclocal.m4  configure  libewf.spec
desktop-app/dependencies/libewf-20230212/common/: Makefile.in  config.h  config.h.in  types.h
desktop-app/dependencies/libewf-20230212/dpkg/: changelog
desktop-app/dependencies/libewf-20230212/ewf.net/: Makefile.in  ewf.net.rc  ewf.net.rc.in  ewf.net_definitions.h  ewf.net_file_entry.cpp  ewf.net_file_entry.h  ewf.net_handle.cpp  ewf.net_handle.h  ewf.net_sector_range.cpp  ewf.net_sector_range.h  ewf.net_support.cpp  ewf.net_support.h
desktop-app/dependencies/libewf-20230212/ewftools/: Makefile.in
desktop-app/dependencies/libewf-20230212/include/: Makefile.in
desktop-app/dependencies/libewf-20230212/libbfio/: Makefile.in
desktop-app/dependencies/libewf-20230212/libcaes/: Makefile.in  libcaes_definitions.h
desktop-app/dependencies/libewf-20230212/libcdata/: Makefile.in
desktop-app/dependencies/libewf-20230212/libcdatetime/: Makefile.am  Makefile.in  libcdatetime_definitions.h
desktop-app/dependencies/libewf-20230212/libcerror/: Makefile.in
desktop-app/dependencies/libewf-20230212/libcfile/: Makefile.in
desktop-app/dependencies/libewf-20230212/libclocale/: Makefile.in
desktop-app/dependencies/libewf-20230212/libcnotify/: Makefile.in
desktop-app/dependencies/libewf-20230212/libcpath/: Makefile.in
desktop-app/dependencies/libewf-20230212/libcsplit/: Makefile.in
desktop-app/dependencies/libewf-20230212/libcthreads/: Makefile.in
desktop-app/dependencies/libewf-20230212/libewf/: Makefile.in  libewf.rc  libewf.rc.in  libewf_definitions.h
desktop-app/dependencies/libewf-20230212/libewf_python.egg-info/: SOURCES.txt
desktop-app/dependencies/libewf-20230212/libfcache/: Makefile.in
desktop-app/dependencies/libewf-20230212/libfdata/: Makefile.in  libfdata_definitions.h
desktop-app/dependencies/libewf-20230212/libfdatetime/: Makefile.in
desktop-app/dependencies/libewf-20230212/libfguid/: Makefile.in
desktop-app/dependencies/libewf-20230212/libsmraw/: Makefile.am  Makefile.in  libsmraw_definitions.h
desktop-app/examples/: basic_process_evidence.py  process_evidence.py
desktop-app/examples/resources/: CNET349SLTask3-snortalerts.txt
(+121 files in other folders)
